plugins {
    id 'com.github.johnrengelman.shadow' version '4.0.4'
    id 'java'
    id 'maven-publish'
}

group 'dev.imabad.mceventsuite'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.hibernate:hibernate-core:5.4.21.Final'
    implementation 'org.hibernate:hibernate-c3p0:5.4.21.Final'
    implementation group: 'javax.persistence', name: 'javax.persistence-api', version: '2.2'
    implementation group: 'javax.xml.bind', name: 'jaxb-api', version: '2.2.4'
    implementation 'redis.clients:jedis:4.2.3'
    implementation 'com.influxdb:influxdb-client-java:6.4.0'
    implementation 'mysql:mysql-connector-java:8.0.30'
    implementation 'com.google.code.gson:gson:2.9.0'
    implementation 'com.google.guava:guava:31.1-jre'
    implementation 'net.kyori:adventure-api:4.11.0'

    testImplementation('org.junit.jupiter:junit-jupiter-api:5.9.0')
    testImplementation('org.junit.jupiter:junit-jupiter-engine:5.9.0')
}

//test {
//    useJUnitPlatform()
//}

publishing {
    publications {
        maven(MavenPublication) {
            groupId = 'dev.imabad.mceventsuite'
            artifactId = 'eventcore'
            version = '1.0-SNAPSHOT'

            from components.java
        }
    }
    repositories {
        maven {
            name = "GitHubPackages"
            url = "https://maven.pkg.github.com/MCEventSuite/EventCore"
            credentials {
                username = System.getenv("GITHUB_ACTOR")
                password = System.getenv("GITHUB_TOKEN")
            }
        }
    }
}
